# AP1Project2

./: CMakeLists.txt  Chebyshev.h  Distances.cpp  Distances.h  FileReader.cpp  FileReader.h  KnnAlgorithm.cpp  KnnAlgorithm.h  Knn_algorithm.cpp  Knn_algorithm.h  Minkowski.cpp  Minkowski.h  README.md  RelativeVector.cpp  RelativeVector.h  main.cpp  makefile
Distances/: AbstractDistance.cpp  AbstractDistance.h  Canberra.cpp  Canberra.h  Chebyshev.cpp  Chebyshev.h  Euclidean.cpp  Euclidean.h  Minkowski.h  Taxicab.cpp  Taxicab.h
datasets/iris/: iris_classified.csv
flow and data/: FileReader.cpp  FileReader.h  KnnAlgorithm.h  RelativeVector.cpp
flowAndData/: FileReader.cpp  FileReader.h  KnnAlgorithm.cpp  KnnAlgorithm.h  RelativeVector.h  Validations.cpp  Validations.h
